<resources>
    <string name="app_name">BeaconSafe</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_support">Chat Support</string>
    <string name="community_forum">Community Forum</string>
    <string name="education_module">Education Module</string>
    <string name="feedback">Feedback</string>
    <string name="home">Home</string>
    <string name="legal_aid_locator_contact">Legal Aid Locator/contact</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="Report_User_Title">Reporting Tools</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="details">Details</string>
    <string name="Phy_Desc">Physical Description of the child</string>
    <string name="photo">Photo (optional) </string>
    <string name="hint_address"> Choose from google map</string>
    <string name="hint_type">Choose from…</string>
    <string name="hint_details"> Write Something here</string>
    <string name="hint_phyDesc"> eg. height, weight, hair color, eye color</string>
    <string name="Submit">Submit</string>
    <string name="AddImg_Desc">Add Image</string>
    <string name="title_activity_google_map">Google_Map</string>

</resources>